<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:padding="14dp"
        android:text="@string/commerce"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/land_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:padding="14dp"
        android:text="@string/arts"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/land_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/Land_h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h2_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Land_h1"
        app:layout_constraintVertical_bias="0.19999999" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:includeFontPadding="false"
        android:padding="14dp"
        android:text="@string/science"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/land_btn"
        app:iconSize="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Land_h2"
       />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="217dp"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bcsea_logo_white"
        app:tint="@color/dark_purple"
        android:contentDescription="@string/bcsea_logo" />

    <TextView
        android:id="@+id/Land_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percentage_calculator"
        android:textColor="@color/dark_purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>